--- a/TareaTablas/tablas.html
+++ b/TareaTablas/tablas.html
@@ -6,9 +6,21 @@
     <title>Tarea Tablas</title>
     <style>
         table {
-            empty-cells: hide;
+            empty-cells: show;
             min-width: 600px;
             min-height: 350px;
+        }
+
+        td {
+            background-color: rgb(191, 191, 191);
+        } 
+
+        #diw {
+            background-color: #f8df81;
+        }
+
+        #dwes {
+            background-color: #f6aa90;
         }
     </style>
 </head>
@@ -24,11 +36,11 @@
     </tr>
     <tr>
         <td>16:30 - 17:20</td>
-        <td rowspan="3">DIW</td>
-        <td rowspan="2">DIW</td>
+        <td id="diw" rowspan="3">DIW</td>
+        <td id="diw" rowspan="2">DIW</td>
         <td rowspan="2">DAW</td>
         <td rowspan="2">DAW</td>
-        <td rowspan="2">DIW</td>
+        <td id="diw" rowspan="2">DIW</td>
     </tr>
     <tr>
         <td>17:20 - 18:10</td>
@@ -54,10 +66,10 @@
     </tr>
     <tr>
         <td>20:05 - 20:55</td>
-        <td rowspan="2">DWES</td>
-        <td rowspan="2">DWES</td>
-        <td rowspan="2">DWES</td>
-        <td rowspan="2">DWES</td>
+        <td id="dwes" rowspan="2">DWES</td>
+        <td id="dwes" rowspan="2">DWES</td>
+        <td id="dwes" rowspan="2">DWES</td>
+        <td id="dwes"rowspan="2">DWES</td>
         <td rowspan="2">EIE</td>
     </tr>
     <tr>
