primera actulizacion viernes

--- a/TareaTablas/tablas.html
+++ b/TareaTablas/tablas.html
@@ -9,18 +9,31 @@
             empty-cells: show;
             min-width: 600px;
             min-height: 350px;
+            background-color: rgb(65, 138, 138);
         }
 
         td {
-            background-color: rgb(191, 191, 191);
+            background-color: #c1ede8; 
         } 
 
-        #diw {
+        .diw {
             background-color: #f8df81;
         }
 
-        #dwes {
+        .dwes {
             background-color: #f6aa90;
+        }
+
+        .eie {
+            background-color: #d5b6d5;
+        }
+
+        .daw {
+            background-color: #f6b4bf;
+        }
+
+        .dwec {
+            background-color: #9bd0b7;
         }
     </style>
 </head>
@@ -36,21 +49,21 @@
     </tr>
     <tr>
         <td>16:30 - 17:20</td>
-        <td id="diw" rowspan="3">DIW</td>
-        <td id="diw" rowspan="2">DIW</td>
-        <td rowspan="2">DAW</td>
-        <td rowspan="2">DAW</td>
-        <td id="diw" rowspan="2">DIW</td>
+        <td class="diw" rowspan="3">DIW</td>
+        <td class="diw" rowspan="2">DIW</td>
+        <td class="daw" rowspan="2">DAW</td>
+        <td class="daw" rowspan="2">DAW</td>
+        <td class="diw" rowspan="2">DIW</td>
     </tr>
     <tr>
         <td>17:20 - 18:10</td>
     </tr>
     <tr>
         <td>18:10 - 19:00</td>
-        <td>EIE</td>
-        <td>DWEC</td>
-        <td>DWEC</td>
-        <td>DWEC</td>
+        <td class="eie">EIE</td>
+        <td class="dwec">DWEC</td>
+        <td class="dwec">DWEC</td>
+        <td class="dwec">DWEC</td>
     </tr>
     <tr>
         <td>19:00 - 19:15</td>
@@ -58,19 +71,19 @@
     </tr>
     <tr>
         <td>19:15 - 20:05</td>
-        <td>DAW</td>
-        <td>DWEC</td>
-        <td>DWEC</td>
-        <td>DWEC</td>
-        <td>DWEC</td>
+        <td class="daw">DAW</td>
+        <td class="dwec">DWEC</td>
+        <td class="dwec">DWEC</td>
+        <td class="dwec">DWEC</td>
+        <td class="dwec">DWEC</td>
     </tr>
     <tr>
         <td>20:05 - 20:55</td>
-        <td id="dwes" rowspan="2">DWES</td>
-        <td id="dwes" rowspan="2">DWES</td>
-        <td id="dwes" rowspan="2">DWES</td>
-        <td id="dwes"rowspan="2">DWES</td>
-        <td rowspan="2">EIE</td>
+        <td class="dwes" rowspan="2">DWES</td>
+        <td class="dwes" rowspan="2">DWES</td>
+        <td class="dwes" rowspan="2">DWES</td>
+        <td class="dwes"rowspan="2">DWES</td>
+        <td class="eie" rowspan="2">EIE</td>
     </tr>
     <tr>
         <td>20:55 - 21:45</td>
