--- a/FormulariosTodoTipo/formulario2.html
+++ b/FormulariosTodoTipo/formulario2.html
@@ -6,7 +6,7 @@
     <title>FORMULARIO 2</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="procesar.php" method="post">
         <p>Usuario</p>
         <input type="text" name="usuario" id="usuario" placeholder="Nombre del viajero">
         <p>Tipo de pasaje 
