--- a/FormulariosTodoTipo/formulario3.html
+++ b/FormulariosTodoTipo/formulario3.html
@@ -6,7 +6,7 @@
     <title>FORMULARIO 3</title>
 </head>
 <body>
-    <form action="" method="get">
+    <form action="procesar.php" method="get">
         <p>Artículo <input type="text" name="articulo" id="articulo" placeholder="Artículo"></p>
         <p>Forma de entrega:</p>
         <p>&emsp;Envio a domicilio <input type="radio" name="envio" id="adomicilio"></p>
