--- a/FormulariosTodoTipo/formulario4.html
+++ b/FormulariosTodoTipo/formulario4.html
@@ -6,7 +6,7 @@
     <title>FORMULARIO 4</title>
 </head>
 <body>
-    <form action="">
+    <form action="procesar.php" method="post">
         <p>Número de matrícula <input type="text" name="matricula" id="matricula" placeholder="Matrícula" pattern="M\d{3}"></p>
         <p>Materias</p>
         <table>
