--- a/FormulariosTodoTipo/formulario5.html
+++ b/FormulariosTodoTipo/formulario5.html
@@ -6,7 +6,7 @@
     <title>FORMULARIO 5</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="procesar.php" method="post">
         <p>Nombre</p>
         <input type="text" name="nombre" id="nombre" placeholder="nombre">
         <p>E-mail</p>
