--- a/TareaEvaluable/index.html
+++ b/TareaEvaluable/index.html
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABEJAS Y ZÁNGANOS</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
-    <div class="encabezado">
-        <div class="logo"><img src="image/logosf.png" style="max-height: 150px;"></div>
-        <div class="titulo">
-            <h1>ABEJAS Y ZÁNGANOS</h1>
-            <h3>ASOCIACIÓN SIERRA DE GATA</h3>
+    <header>
+        <div class="titular">
+            <img src="image/logosf.png">
+            <div class="encabezado">
+                <h1>ABEJAS Y ZÁNGANOS</h1>
+                <h3>ASOCIACIÓN SIERRA DE GATA</h3>
+            </div>
         </div>
-    </div>
+        <nav>
+            <a href="">Inicio</a>
+            <a href="">Inicio</a>
+            <a href="">Inicio</a>
+            <a href="">Inicio</a>
+        </nav>
+    </header>
+    <main>
+        <aside>
+            <h5>GALERIA</h5>
+            <div class="imagen"></div>
+            <div class="imagen"></div>
+        </aside>
+        <article>
+            <div class="textoart">
+                <h3>Titulo</h3>
+                <h5>Subtitulo</h5>
+                <div class="contenido">
+                    <div class="imagencuadrada"></div>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse cum placeat quo maxime saepe
+                        voluptatibus asperiores dolor itaque quia harum, obcaecati recusandae deleniti facere ullam
+                        perferendis quis eos fugit incidunt!</p>
+                </div>
+            </div>
+            <aside>
+                <div class="imagencuadrada"></div>
+                <div class="imagencuadrada"></div>
+            </aside>
+        </article>
+    </main>
+    <footer>
+        <p>djskaldj</p>
+    </footer>
 </body>
+
 </html>
