--- a/TareaEvaluable/index.html
+++ b/TareaEvaluable/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ABEJAS Y ZÁNGANOS</title>
+    <!-- Añadimos la fuente Lilita One -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+    <!-- Añadimos la fuente Chakra Petch -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
 </head>
 
@@ -18,6 +26,7 @@
             </div>
         </div>
         <nav>
+            <a href="" class="casa"><img src="image/casa-silueta-negra-sin-puerta.png" alt="Inicio"></a>
             <a href="">Inicio</a>
             <a href="">Inicio</a>
             <a href="">Inicio</a>
@@ -26,7 +35,7 @@
     </header>
     <main>
         <aside>
-            <h5>GALERIA</h5>
+            <h5 class="galeria">GALERIA</h5>
             <div class="imagen"></div>
             <div class="imagen"></div>
         </aside>
