--- a/TareaEvaluable/compra.html
+++ b/TareaEvaluable/compra.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lilita+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estiloscompra.css">
 </head>
 
 <body>
@@ -33,29 +34,37 @@
         </nav>
     </header>
     <main>
-        <aside>
-            <h5 class="galeria">GALERIA</h5>
-            <img src="image/imagen1.jpg" class="imagen">
-            <img src="image/imagen2.jpg" class="imagen">
-        </aside>
         <article>
-            <div class="textoart">
-                <h3>ABEJAS Y ZÁNGANOS</h3>
-                <h5>¿QUIENES SOMOS?</h5>
-                <div class="contenido">
-                    <img src="image/sgata.png" class="imagencuadrada">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse cum placeat quo maxime saepe
-                        voluptatibus asperiores dolor itaque quia harum, obcaecati recusandae deleniti facere ullam
-                        perferendis quis eos fugit incidunt!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Nostrum voluptatem, aliquam quaerat labore itaque architecto sunt accusantium maiores est minima aut?
-                         Minima, consequatur dignissimos! Eius iure voluptatum ex eaque nesciunt?</p>
-                </div>
+            <div class="producto">
+                <img src="image/miel.jpg" class="imagencuadrada">
+                <h5>MIEL</h5>
+                <button>Añadir</button>
             </div>
-            <aside>
-                <img src="image/imagen3.jpg" class="imagencuadrada">
-                <img src="image/imagen4.png" class="imagencuadrada">
-            </aside>
+            <div class="producto">
+                <img src="image/cera.jpeg" class="imagencuadrada">
+                <h5>CERA</h5>
+                <button>Añadir</button>
+            </div>
+            <div class="producto">
+                <img src="image/jalea.jpg" class="imagencuadrada">
+                <h5>JALEA REAL</h5>
+                <button>Añadir</button>
+            </div>
+            <div class="producto">
+                <img src="image/propoleo.jpg" class="imagencuadrada">
+                <h5>PROPÓLEO</h5>
+                <button>Añadir</button>
+            </div>
+            <div class="producto">
+                <img src="image/veneno.jpg" class="imagencuadrada">
+                <h5>VENENO</h5>
+                <button>Añadir</button>
+            </div>
+            <div class="producto">
+                <img src="image/hidromiel.jpg" class="imagencuadrada">
+                <h5>HIDROMIEL</h5>
+                <button>Añadir</button>
+            </div>
         </article>
     </main>
     <footer>
