--- a/TareaEvaluable/index.html
+++ b/TareaEvaluable/index.html
@@ -12,7 +12,9 @@
     <!-- Añadimos la fuente Chakra Petch -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lilita+One&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lilita+One&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="estilos.css">
 </head>
 
@@ -26,7 +28,10 @@
             </div>
         </div>
         <nav>
-            <a href="index.html" class="casa"><img src="image/casa-silueta-negra-sin-puerta.png" alt="Inicio"></a>
+            <div>
+                <a href="index.html" class="casa"><img src="image/casa-silueta-negra-sin-puerta.png" alt="Inicio"></a>
+            </div>
+            <!-- <a href="index.html" class="casa"><img src="image/casa-silueta-negra-sin-puerta.png" alt="Inicio"></a> -->
             <a href="compra.html">Compra nuestros productos</a>
             <a href="">¿Quienes somos?</a>
             <a href="">Contacta con nosotros...</a>
@@ -47,9 +52,10 @@
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse cum placeat quo maxime saepe
                         voluptatibus asperiores dolor itaque quia harum, obcaecati recusandae deleniti facere ullam
                         perferendis quis eos fugit incidunt!</p>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Nostrum voluptatem, aliquam quaerat labore itaque architecto sunt accusantium maiores est minima aut?
-                         Minima, consequatur dignissimos! Eius iure voluptatum ex eaque nesciunt?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        Nostrum voluptatem, aliquam quaerat labore itaque architecto sunt accusantium maiores est minima
+                        aut?
+                        Minima, consequatur dignissimos! Eius iure voluptatum ex eaque nesciunt?</p>
                 </div>
             </div>
             <aside>
