--- a/TareaEvaluable/index.html
+++ b/TareaEvaluable/index.html
@@ -33,8 +33,7 @@
             </div>
             <!-- <a href="index.html" class="casa"><img src="image/casa-silueta-negra-sin-puerta.png" alt="Inicio"></a> -->
             <a href="compra.html">Compra nuestros productos</a>
-            <a href="">¿Quienes somos?</a>
-            <a href="">Contacta con nosotros...</a>
+            <a href="formulario.html">Contacta con nosotros</a>
         </nav>
     </header>
     <main>
